# Openclaw-Connector

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  release.yml
apps/connector/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/connector/src-tauri/: Cargo.toml  tauri.conf.json
apps/connector/src-tauri/src/: bindings.rs  config.rs  emergency.rs  executor.rs  health.rs  heartbeat.rs  lib.rs  main.rs  ssh_tunnel.rs  tasks.rs
apps/connector/src-tauri/tests/: bindings_test.rs  config_test.rs  emergency_disconnect_test.rs  executor_test.rs  heartbeat_test.rs  ssh_tunnel_test.rs  task_router_test.rs
docs/: ops-runbook.zh-CN.md  troubleshooting.zh-CN.md
docs/plans/: 2026-03-04-mac-connector-mvp.md  2026-03-06-milestone-acceptance-design.md  2026-03-06-milestone-acceptance-plan.md  2026-03-10-p1-theme-health-design.md  2026-03-10-p1-theme-health.md  2026-03-16-connection-wizard.md  2026-03-16-diagnostic-export.md  2026-03-17-exec-policy-toggle.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  config.rs  lib.rs  ssh_tunnel.rs  ws_client.rs
src-tauri/tests/: config_test.rs  executor_test.rs  health_summary_test.rs  ssh_tunnel_test.rs
src/__tests__/: app-shell.test.tsx
src/components/: NewProfileForm.tsx  ProfileDetail.tsx  ProfileSidebar.tsx  ProfileWizard.tsx
(+35 files in other folders)
